--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -29,7 +29,7 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "golang-repo-template",
+  "projectName": "zapring",
   "projectOwner": "moul",
   "repoType": "github",
   "repoHost": "https://github.com",
