--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,24 +27,24 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.15.x
-      -
-        name: Cache Go modules
-        if: steps.semantic.outputs.new-release-published == 'true'
-        uses: actions/cache@v2.1.4
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-      -
-        name: Run GoReleaser
-        if: steps.semantic.outputs.new-release-published == 'true'
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #-
+      #  name: Cache Go modules
+      #  if: steps.semantic.outputs.new-release-published == 'true'
+      #  uses: actions/cache@v2.1.4
+      #  with:
+      #    path: ~/go/pkg/mod
+      #    key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-go-
+      #-
+      #  name: Run GoReleaser
+      #  if: steps.semantic.outputs.new-release-published == 'true'
+      #  uses: goreleaser/goreleaser-action@v2
+      #  with:
+      #    version: latest
+      #    args: release --rm-dist
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Register version on pkg.go.dev
         if: steps.semantic.outputs.new-release-published == 'true'
